--- a/session7_cluster_analysis/session7_cluster_analysis.ipynb
+++ b/session7_cluster_analysis/session7_cluster_analysis.ipynb
@@ -5,13 +5,25 @@
    "id": "c76d6d83",
    "metadata": {},
    "source": [
+    "---\n",
     "# Cluster analysis\n",
+    "---\n",
+    "\n",
+    "Author: Dr. Julia Jerke, University of Zurich  \n",
+    "Date: November 25, 2021  \n",
+    "contact: jerke@soziologie.uzh.ch\n",
     "\n",
     "\n",
-    "#### _Author: Dr. Julia Jerke_\n",
-    "#### _Date: 2021-09-30_\n",
     "\n",
-    "--- "
+    "\n",
+    "## Overview:\n",
+    "1. Loading the data and data inspection\n",
+    "2. K-means cluster analysis\n",
+    "3. Agglomerative cluster analysis\n",
+    "\n",
+    "---\n",
+    "---\n",
+    "---"
    ]
   },
   {
