correction of folder names

--- a/session07_cluster_analysis/session7_cluster_analysis.ipynb
+++ b/session07_cluster_analysis/session7_cluster_analysis.ipynb
@@ -542,7 +542,7 @@
    "id": "1a65662b",
    "metadata": {},
    "source": [
-    "The small difference in results can be explained by a minor difference in how the sample variance, and hence the standard deviation, is calculated in _pandas_ and _sciokit_learn_."
+    "The small difference in results can be explained by a minor difference in how the sample variance, and hence the standard deviation, is calculated in _pandas_ and _scikit-learn_."
    ]
   },
   {
